
* GITHUB#12453: Faster bulk numeric reads from BufferedIndexInput (Armin Braun)

* GITHUB#12415: Optimized counts on disjunctive queries. (Adrien Grand)

* GITHUB#12518: Use panama vector API to speed up l2norm calculations (Ben Trent)

* GITHUB##12371: Lazy computation of similarity score during initializeFromGraph (Jack Wang)

Bug Fixes
---------------------

* GITHUB#9660: Throw an ArithmeticException when the offset overflows in a ByteBlockPool. (Stefan Vodita)

* GITHUB#11537: Fix stack overflow in RegExp for long strings by reducing recursion. (Jakub Slowinski)

* GITHUB#12388: JoinUtil queries were ignoring boosts. (Alan Woodward)

* GITHUB#12413: Fix HNSW graph search bug that potentially leaked unapproved docs (Ben Trent).

* GITHUB#12423: Respect timeouts in ExitableDirectoryReader when searching with byte[] vectors (Ben Trent).

* GITHUB#12451: Change TestStringsToAutomaton validation to avoid automaton conversion bug discovered in GH#12458
  (Greg Miller).

* GITHUB#2472: UTF32ToUTF8 would sometimes accept extra invalid UTF-8 binary sequences.  This should not have any
  impact on the user, unless you explicitly invoke the convert function of UTF32ToUTF8, and in the extremely rare
  scenario of searching a non-UTF-8 inverted field with Unicode search terms (Tang Donghai).

* LUCENE-12521: Sort After returning in-correct result when missing values are competitive. (Chaitanya Gohel)

Other
---------------------

* GITHUB#12404: Remove usage and add some legacy java.util classes to forbiddenapis (Stack, Hashtable, Vector).
  (Uwe Schindler)

* GITHUB#12410: Refactor vectorization support (split provider from implementation classes).
  (Uwe Schindler, Chris Hegarty)

* GITHUB#12428: Replace consecutive close() calls and close() calls with null checks with IOUtils.close().
  (Shubham Chaudhary)

* GITHUB#12512: Remove unused variable in BKDWriter. (Chao Zhang)

======================== Lucene 9.7.0 =======================

API Changes
---------------------
