@@ -186,6 +186,11 @@ Optimizations
 
 * GITHUB##12371: Lazy computation of similarity score during initializeFromGraph (Jack Wang)
 
+Changes in runtime behavior
+---------------------
+
+* GITHUB#12516: Unwrap and rethrow execution exceptions cause when performing concurrent search
+
 Bug Fixes
 ---------------------
 
